--- a/www/css/base.css
+++ b/www/css/base.css
@@ -53,3 +53,15 @@ body {
     border: 1px solid #444;
     box-sizing: border-box;
 }
+
+#loading{
+  display:block;
+  width:100%;
+  height:100%;
+}
+
+#loading img {
+  position:absolute;
+  left:45%;
+  top:20%
+}
